--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-redux": "^9.1.2",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
+    "react-spinners": "^0.14.1",
     "react-timeago": "^7.2.0",
     "react-toastify": "^10.0.5",
     "uuid": "^10.0.0",
